Se añaden los archivos

--- a/index.html
+++ b/index.html
@@ -20,17 +20,10 @@
     <div class="logo">VillandSaga</div>
 
     <ul class="menu">
-        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Galery ⛩</a></li>
         <li class="dropdown">
-            <a href="#">Clanes ⛩</a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Vikingos</a></li>
-                <li><a href="#">Samuráis</a></li>
-                <li><a href="#">Guerreros</a></li>
-            </ul>
+            <a href="#">Posters ⛩</a>
         </li>
-        <li><a href="#">Historia</a></li>
-        <li><a href="#">Contacto</a></li>
     </ul>
 
     <div class="menu-toggle" id="menuToggle">☰</div>
@@ -39,12 +32,12 @@
 <!-- HERO -->
 <header class="hero">
     <h1 class="glitch">VillandSaga</h1>
-    <p>Honor • Guerra • Destino</p>
+    <p>Honor • War • Destiny</p>
 
-    <div class="buttons">
-        <button class="btn primary">Explorar</button>
-        <button class="btn secondary">Ver Historia</button>
-    </div>
+   <div class="buttons">
+    <a href="history.html" class="btn secondary">History</a>
+</div>
+
 </header>
 
 <!-- SECCIÓN -->
@@ -52,16 +45,19 @@
     <div class="bio-text">
         <h2>Thorfinn Thorsson</h2>
         <p>
-            Thorfinn Thorsson es el protagonista de Vinland Saga, un joven islandés
-            marcado por la violencia desde temprana edad. Hijo de Thors, un legendario
-            guerrero vikingo que creía en la paz, Thorfinn crece consumido por el odio
-            y la venganza tras presenciar su muerte.
+Thorfinn Thorsson is the protagonist of Vinland Saga, a young Icelander
+
+marked by violence from an early age. The son of Thors, a legendary
+Viking warrior who believed in peace, Thorfinn grows up consumed by hatred
+
+and revenge after witnessing his death.
         </p>
         <p>
-            Durante años lucha bajo el mando de Askeladd con el único objetivo de
-            vengarse, pero su camino cambia cuando pierde su propósito. Su evolución
-            lo lleva a rechazar la violencia y buscar un mundo sin esclavitud ni guerra,
-            convirtiéndose en un verdadero guerrero: aquel que no necesita la espada.
+For years he fights under Askeladd's command with the sole aim of
+revenge, but his path changes when he loses his purpose. His evolution
+leads him to reject violence and seek a world without slavery or war,
+
+becoming a true warrior: one who does not need the sword.
         </p>
     </div>
 
@@ -72,11 +68,18 @@
 
 <section class="space">
     <div class="overlay">
-        <h2>Clanes Superiores</h2>
-        <p>Guerreros forjados por la guerra y el honor</p>
     </div>
 </section>
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-logo">VillandSaga</div>
 
-<script src="script.js"></script>
+        <div class="footer-copy">
+            © 2026 VillandSaga
+        </div>
+    </div>
+</footer>
+
+<script src="scrip.js"></script>
 </body>
 </html>
