Se añaden los archivos recientes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="logo">VillandSaga</div>
 
     <ul class="menu">
-        <li><a href="#">Galery ⛩</a></li>
+        <li><a href="Galery.html">Galery ⛩</a></li>
         <li class="dropdown">
-            <a href="#">Posters ⛩</a>
+            <a href="posters.html">Posters ⛩</a>
         </li>
     </ul>
 
@@ -34,7 +34,7 @@
     <h1 class="glitch">VillandSaga</h1>
     <p>Honor • War • Destiny</p>
 
-   <div class="buttons">
+<div class="buttons">
     <a href="history.html" class="btn secondary">History</a>
 </div>
 
